# ESP32S2_Audio

./: README.md
Firmware/: CMakeLists.txt  README.md  sdkconfig
Firmware/main/: CMakeLists.txt  audio.c  audio.h  button.c  button.h  circbuf.c  dsp_lib.c  dsp_lib.h  eb_adc.c  eb_adc.h  eb_wm8731.c  eb_wm8731.h  esp_gfx.c  esp_gfx.h  fx.c  fx.h  fx_cdl.c  fx_cdl.h  fx_vca.c  fx_vca.h  i2s_lowlat.c  i2s_lowlat.h  main.c  main.h  menu.c  menu.h  st7735.c  st7735.h  widgets.c  widgets.h
Hardware/: Euro.kicad_sch  esp32s2_audio-cache.lib  esp32s2_audio.kicad_pcb  esp32s2_audio.kicad_prl  esp32s2_audio.kicad_pro  esp32s2_audio.kicad_sch  esp32s2_audio_bom.ods
Hardware/esp32s2_panel/: esp32s2_panel.kicad_pcb  esp32s2_panel.kicad_prl  esp32s2_panel.kicad_pro  esp32s2_panel.kicad_sch
