idf_component_register(SRCS "main.c"
							"st7735.c"
							"gfx.c"
							"eb_adc.c"
							"audio.c"
							"eb_wm8731.c"
							"i2s_lowlat.c"
							"button.c"
							"debounce.c"
							"menu.c"
							"fx.c"
							"dsp_lib.c"
							"fx_vca.c"
							"fx_cdl.c"
							"circbuf.c"
							"widgets.c"
                    INCLUDE_DIRS ".")
